feat: Refine color palette and improve search page scroll
Updates the luxury color palette to use a darker gold for text/borders and a lighter gold for accent elements. Implements automatic scrolling to the top of the page when the SearchPage component mounts to improve user experience.

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
               luxury: {
                 green: '#283428',
                 offwhite: '#F9F9F9',
-                gold: '#C5A059', // A more sophisticated gold for text/borders
-                yellow: '#FFEA00', // The vibrant accent requested
+                gold: '#C5A059', // Darker gold for text/borders (Edges of the running text)
+                yellow: '#E3C67B', // Updated to #E3C67B (Lighter Gold) to match the shiny center of the running text
                 slate: '#64748b'
               }
             },
